--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
 <head>
   <title>Cat Images</title>
 </head>
-<body>
+<body> 
+  <style> 
+  .button {
+  background-color: #04AA6D; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  }
+  
+  
+  </style>
 
   <h1>Cat Images</h1>
 
   <img id="catImage" src="https://cataas.com/cat">
 
-  <button id="refreshButton">Refresh</button>
+  <button class = "button" id="refreshButton">Refresh</button>
 
   <script>
     function refreshImage() {
