--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+   width: 100%;
   }
   
   
@@ -22,6 +23,8 @@
   <h1>Cat Images</h1>
 
   <img id="catImage" src="https://cataas.com/cat">
+ 
+  <br>
 
   <button class = "button" id="refreshButton">Refresh</button>
 
