--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
   font-size: 16px;
    width: 100%;
   }
+    h1 {
+	margin: 1em 0 0.5em 0;
+	color: #343434;
+	font-weight: normal;
+	font-family: 'Ultra', sans-serif;   
+	font-size: 36px;
+	line-height: 42px;
+	text-transform: uppercase;
+	text-shadow: 0 2px white, 0 3px #777;
+    }
   
   
   </style>
