--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 	color: #343434;
 	font-weight: normal;
 	font-family: 'Ultra', sans-serif;   
-	font-size: 36px;
+	font-size: 100px;
 	line-height: 42px;
 	text-transform: uppercase;
 	text-shadow: 0 2px white, 0 3px #777;
+	    text-align: centre;
     }
   
   
